# ngy

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: request_exemple.py
src/ngy/: Magic_Request.py  Magic_Request_sav.py  Map_func.py  Request.py  Tiles.py  Tools.py  __init__.py
src/ngy/data/: wmts.xml
