[project]
name = "ngy"
version = "0.9.1"
authors = [
  { name="Sébastien LAUTIER", email="sebastien.lautier@gmail.com" },
]
description = "Create MBTiles from IGN maps"
readme = "README.md"
requires-python = ">=3.10.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.8.4",
    "aiosignal>=1.3.1",
    "async-timeout>=4.0.2",
    "attrs>=23.1.0",
    "certifi>=2023.5.7",
    "charset-normalizer>=3.1.0",
    "colorama>=0.4.6",
    "frozenlist>=1.3.3",
    "idna>=3.4",
    "lxml>=4.9.2",
    "multidict>=6.0.4",
    "pyproj>=3.5.0",
    "tqdm>=4.65.0",
    "yarl>=1.9.2"
]

[project.urls]
"Homepage" = "https://github.com/sebastien17/ngy"
"Bug Tracker" = "https://github.com/sebastien17/ngy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
]
exclude = [
  "requirements.txt"
]
